# yalbb_optimal_lb_solver

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  a.out  build_hostfile.py  cluster.xml  compile  force.txt  generate_platform.py  generate_points.py  hostfile  main  multicore_machine.xml  orb  plat.xml  points.txt
experiments/BlackHoles/: Blackholes.cpp  CMakeLists.txt
experiments/Collision/: CMakeLists.txt  Collision.cpp
experiments/Compression/: CMakeLists.txt  Compression.cpp
experiments/ContractingCircles/: CMakeLists.txt  ContractingCircles.cpp
experiments/ExpandingCircles/: CMakeLists.txt
experiments/Expansion/: CMakeLists.txt  Expansion.cpp
experiments/ExpansionCompression/: CMakeLists.txt  ExpansionCompression.cpp
experiments/FourExpandingCircles/: CMakeLists.txt  FourExpandingCircles.cpp
experiments/Gravity/: CMakeLists.txt  Gravity.cpp
experiments/GravityCircle/: CMakeLists.txt  GravityCircle.cpp
experiments/GravityThesisExample/: Gravity.cpp
experiments/JOCS/: CMakeLists.txt
experiments/JOCS/BlackHoles/: Blackholes.cpp
experiments/JOCS/CompressionNORCB/: CMakeLists.txt  Compression.cpp
experiments/JOCS/ContractingCircles/: ContractingCircles.cpp
experiments/JOCS/Gravity/: Gravity.cpp
experiments/JOCS/NoRCBBenchmark/: NoRCBBenchmark.cpp
experiments/JPDC/: CMakeLists.txt
experiments/JPDC/Compression/: CMakeLists.txt  Compression.cpp
experiments/JPDC/Expansion/: CMakeLists.txt  Expansion.cpp
experiments/JPDC/ExpansionCompression/: CMakeLists.txt  ExpansionCompression.cpp
experiments/NoRCBBenchmark/: CMakeLists.txt  NoRCBBenchmark.cpp
experiments/PaperExampleExp/: CMakeLists.txt  PaperExampleExp.cpp
experiments/Tutorial/PaperExampleExp/: CMakeLists.txt  PaperExampleExp.cpp
experiments/examples/BlackHoles/: Blackholes.cpp
experiments/examples/Compression/: Compression.cpp
experiments/examples/CompressionNORCB/: Compression.cpp
experiments/examples/ContractingCircles/: ContractingCircles.cpp
experiments/examples/ExpandingCircles/: ExpandingCircles.cpp
experiments/examples/Expansion/: Expansion.cpp
experiments/examples/ExpansionCompression/: ExpansionCompression.cpp
experiments/examples/Gravity/: CMakeLists.txt  Gravity.cpp
experiments/examples/GravityCircle/: CMakeLists.txt
experiments/examples/GravityThesisExample/: CMakeLists.txt  Gravity.cpp
logs/1994/marquez/frames/: particle.csv.0  particle.csv.10  particle.csv.100  particle.csv.1000  particle.csv.101  particle.csv.102  particle.csv.103  particle.csv.104  particle.csv.105  particle.csv.106  particle.csv.107  particle.csv.108  particle.csv.109  particle.csv.11  particle.csv.110  particle.csv.111  particle.csv.112  particle.csv.113  particle.csv.114  particle.csv.115  particle.csv.116  particle.csv.117  particle.csv.118  particle.csv.119  particle.csv.12  particle.csv.120  particle.csv.121  particle.csv.122  particle.csv.123  particle.csv.124  particle.csv.125  particle.csv.126  particle.csv.127  particle.csv.128  particle.csv.129  particle.csv.13  particle.csv.130  particle.csv.131  particle.csv.132  particle.csv.133  (+960 more)
logs/1994/marquez/monitoring/: cum_imbalance.txt  cum_time.txt  efficiency.txt  imbalance.txt  interactions.txt  lb_cost.txt  lb_it.txt  time.txt
logs/1994/menon/frames/: particle.csv.0  particle.csv.1  particle.csv.10  particle.csv.100  particle.csv.1000  particle.csv.101  particle.csv.102  particle.csv.103  particle.csv.104  particle.csv.105  particle.csv.106  particle.csv.107  particle.csv.108  particle.csv.109  particle.csv.11  particle.csv.110  particle.csv.111  particle.csv.112  particle.csv.113  particle.csv.114  particle.csv.115  particle.csv.116  particle.csv.117  particle.csv.118  particle.csv.119  particle.csv.12  particle.csv.120  particle.csv.121  particle.csv.122  particle.csv.123  particle.csv.124  particle.csv.125  particle.csv.126  particle.csv.127  particle.csv.128  particle.csv.129  particle.csv.13  particle.csv.130  particle.csv.131  particle.csv.132  (+961 more)
logs/1994/menon/monitoring/: cum_imbalance.txt  cum_time.txt  efficiency.txt  imbalance.txt  interactions.txt  lb_it.txt  time.txt
logs/1994/procassini/frames/: particle.csv.1  particle.csv.10  particle.csv.100  particle.csv.1000  particle.csv.101  particle.csv.102  particle.csv.103  particle.csv.104  particle.csv.105  particle.csv.106  particle.csv.107  particle.csv.108  particle.csv.109  particle.csv.11  particle.csv.110  particle.csv.111  particle.csv.112  particle.csv.113  particle.csv.114  particle.csv.115  particle.csv.116  particle.csv.117  particle.csv.118  particle.csv.119  particle.csv.12  particle.csv.120  particle.csv.121  particle.csv.122  particle.csv.123  particle.csv.124  particle.csv.125  particle.csv.126  particle.csv.127  particle.csv.128  particle.csv.129  particle.csv.13  particle.csv.130  particle.csv.131  particle.csv.132  particle.csv.133  (+960 more)
logs/1994/procassini/monitoring/: cum_imbalance.txt  cum_time.txt  efficiency.txt  imbalance.txt  interactions.txt  lb_cost.txt  lb_it.txt  time.txt
logs/menon_1994/monitoring/: 0_imbalance.txt  0_lb_it.txt  0_time.txt  efficiency.txt  imbalance.txt  time.txt
logs/nolb_1994/monitoring/: efficiency.txt  imbalance.txt  time.txt
src/: StripeLB.hpp  experience.hpp  initial_conditions.hpp  lb_custom.hpp  lb_norcb.hpp  lb_rcb.hpp  lb_stripe.hpp  lb_zoltan.hpp  loadbalancing.hpp  main.cpp  main_astar.cpp  main_marquez.cpp  main_menon.cpp  main_procassini.cpp  main_test.cpp  norcb.hpp  parser.hpp  run.hpp  spatial_elements.hpp  utils.hpp  zoltan_fn.cpp  zoltan_fn.hpp
src/experiments/: Collision.cpp  Compression.cpp  Expansion.cpp  ExpansionCompression.cpp  Gravity.cpp
zoltan/: zoltan_fn.hpp
